# bazel-mypy-integration

./: .bazelrc  .gitignore  .mypy.ini  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  config.bzl  mypy.bzl  mypy_tests.bzl  requirements-locked.txt  rules.bzl  test.sh
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/workflows/: continuous-integration.yml  release.yml  release_prep.sh  workspace_snippet.sh
.ijwb/: .bazelproject
examples/: .bazelrc  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  lint.sh
examples/fully_qualified/: BUILD  string_tools.py
examples/hangman/: BUILD  hangman.py
examples/hangman/third_layer/: third_layer.py
examples/hangman/tools/: hangman_tools.py
examples/hangman/tools/internal/: hangman_tools_internal.py
examples/mypy_lang_org_examples/: BUILD  prime_number_seive.py  simple_class.py  word_freqs_with_dict.py
examples/mypy_stubs/: BUILD  parse_name.py  parse_name.pyi
examples/mypy_stubs/stubs/: parse.pyi
examples/non-python-code/hello-world-java/: BUILD  HelloWorld.java
examples/pep_561_dependencies/: BUILD  use_httpx.py
examples/testing_deps/: BUILD  main.py
examples/testing_deps/bar/: BUILD  boo.py
examples/testing_deps/foo/: BUILD  fizz.py
examples/thirdparty_stubs/: BUILD
examples/tools/linting/: BUILD  aspect.bzl
examples/tools/typing/: BUILD  mypy.ini  mypy_requirements.txt  mypy_version.txt
examples/util/: BUILD  util.py
mypy/: BUILD  main.py  sitepkg_runner.py
repositories/: BUILD  deps.bzl  pip_repositories.bzl  py_repositories.bzl  repositories.bzl
templates/: BUILD  mypy.sh.tpl
test/: BUILD  broken_imported_typings.py  broken_mypy_typings.py  correct_imported_mypy_typings.py  correct_mypy_typings.py
test/foo/: BUILD  bar.py
test/shell/: test_helper.sh  test_mypy.sh  test_mypy_aspect.sh  test_runner.sh
test/types/: BUILD  __init__.py
tools/: BUILD
tools/buildifier/: BUILD
